<resources>
    <string name="app_name">SimplyWeather</string>
    <string name="retrieve">Fetch weather information</string>
    <string name="cityHint">City name</string>
    <string name="countryHint">Country code (optional)</string>
    <string name="loadingWeather">Fetching previous location weather data...</string>
    <string name="cityIsEmpty">Please enter a city name to continue..</string>
    <string name="toastError">It seems like we\'re having difficulty retrieving data, please try again later.</string>
    <string name="lastCachedResults">Offline weather statistics</string>
    <string name="UpToDateInfo">Up-to-date weather statistics</string>
    <string name="refresh">Refresh</string>
</resources>
