<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/sw_background_color"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_horizontal"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/sw_accent_color"
        android:text="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/noticeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textColor="@color/sw_accent_color"
                android:text="@string/lastCachedResults"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:background="@drawable/card_background"
                android:orientation="vertical">
        <TextClock
            android:id="@+id/dateClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="5dp"
            android:drawableStart="@null"
            android:drawablePadding="8dp"
            android:drawableTint="@color/sw_text_color"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/sw_text_color"
            android:format12Hour="EEE, MMM d"
            android:format24Hour="EEE, MMM d"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/sw_text_color"
                android:id="@+id/tvResult"
                android:lineSpacingMultiplier="1.5" />
                <TextView
                    android:id="@+id/cityText"
                    android:gravity="center_horizontal"
                    android:visibility="invisible"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_button"
                android:textColor="@color/sw_text_color"
                android:onClick="refreshActivity"
                android:text="@string/refresh"
                app:backgroundTint="@color/sw_button_color" />
        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/cityHint"
            android:textColor="@color/sw_accent_color"
            android:textColorHighlight="@color/sw_text_highlight_color"
            android:textColorHint="@drawable/text_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/countryHint"
            android:textColor="@color/sw_accent_color"
            android:textColorHighlight="@color/sw_text_highlight_color"
            android:textColorHint="@drawable/text_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGet"
            android:background="@drawable/bg_overview_clear_all_button"
            android:textColor="@color/sw_text_color"
            android:onClick="getWeatherDetails"
            android:text="@string/retrieve"
            app:backgroundTint="@color/sw_button_color" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </View>
    </LinearLayout>
</LinearLayout>
